docs(playground): fix typo

--- a/packages/document/docs/en/plugin/official-plugins/playground.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/playground.mdx
@@ -50,7 +50,7 @@ export default App;
 ```
 ````
 
-Otherwise, You can use `direction` parameter to specify the layout, `horizontal` and `vertical` is supported:
+Otherwise, You can use `direction` parameter to specify the playground layout, `horizontal` and `vertical` are supported:
 
 ````md
 ```jsx direction=vertical
@@ -138,7 +138,7 @@ import getImport from 'playground-imports';
 import { Render, Editor } from '@rspress/plugin-playground/web';
 ```
 
-You can refer to the built-in [Playground.tsx](https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-playground/static/global-components/Playground.tsx)
+You can refer to the built-in [Playground.tsx](https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-playground/static/global-components/Playground.tsx).
 
 ### include
 By default, this plugin will automatically scan all import statements in the demos, the packages not used in the demos cannot be used in the playground. If you want to add other packages to the playground, you can use the `include` parameter:
