docs(playground): add to overview

--- a/packages/document/docs/en/plugin/official-plugins/playground.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/playground.mdx
@@ -2,7 +2,7 @@
 
 > [Source Code](https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-playground)
 
-Used to preview components in the code block of md(x) files, and provide a real-time playground.
+Provide a real-time playground to preview the code blocks in Markdown/MDX files.
 
 ## Installation
 
@@ -174,7 +174,7 @@ pluginPlayground({
 ```
 ### monacoLoader
 
-Configure monaco-loader behaviors. The complete document can be found at [suren-atoyan/monaco-loader](https://github.com/suren-atoyan/monaco-loader#config)
+Configure monaco-loader behaviors. The full document can be found at [suren-atoyan/monaco-loader](https://github.com/suren-atoyan/monaco-loader#config)
 
 ### monacoOptions
 
