--- a/packages/document/docs/zh/plugin/official-plugins/playground.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/playground.mdx
@@ -2,7 +2,7 @@
 
 > [源码地址](https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-playground)
 
-用于预览 md(x) 文件代码块中的组件，并提供实时 Playground；
+提供一个可实时编辑的 Playground 以预览 md(x) 文件代码块中的组件。
 
 ## 安装
 
@@ -175,8 +175,8 @@ pluginPlayground({
 
 ### monacoLoader
 
-配置 monaco-loader 相关行为，完整文档可见[suren-atoyan/monaco-loader](https://github.com/suren-atoyan/monaco-loader#config)
+配置 monaco-loader 相关行为，完整文档可见 [suren-atoyan/monaco-loader](https://github.com/suren-atoyan/monaco-loader#config)
 
 ### monacoOptions
 
-配置 monaco editor，对应[IStandaloneEditorConstructionOptions](https://microsoft.github.io/monaco-editor/typedoc/interfaces/editor.IStandaloneEditorConstructionOptions.html)
+配置 monaco editor，对应 [IStandaloneEditorConstructionOptions](https://microsoft.github.io/monaco-editor/typedoc/interfaces/editor.IStandaloneEditorConstructionOptions.html)
