--- a/packages/document/docs/en/plugin/official-plugins/overview.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/overview.mdx
@@ -2,8 +2,9 @@
 
 Official plugins include the following:
 
-- [@rspress/plugin-medium-zoom](./medium-zoom)： [medium-zoom](https://github.com/francoischalifour/medium-zoom) plugin, used to zoom in images.
-- [@rspress/plugin-last-updated](./last-updated)： Support for displaying the last update time of the article.
-- [@rspress/plugin-container-syntax](./container-syntax)： Support container syntax in Markdown/MDX.
-- [@rspress/plugin-typedoc](./typedoc)：Integrate [TypeDoc](https://github.com/TypeStrong/typedoc), used to generate API documentation of TS module automatically.
-- [@rspress/plugin-preview](./preview)：Support preview of code blocks in Markdown/MDX.
+- [@rspress/plugin-medium-zoom](./medium-zoom): [medium-zoom](https://github.com/francoischalifour/medium-zoom) plugin, used to zoom in images.
+- [@rspress/plugin-last-updated](./last-updated): Support for displaying the last update time of the article.
+- [@rspress/plugin-container-syntax](./container-syntax): Support container syntax in Markdown/MDX.
+- [@rspress/plugin-typedoc](./typedoc): Integrate [TypeDoc](https://github.com/TypeStrong/typedoc), used to generate API documentation of TS module automatically.
+- [@rspress/plugin-preview](./preview): Support preview of code blocks in Markdown/MDX.
+- [@rspress/plugin-playground](./playground): Provide a real-time playground to preview the code blocks in Markdown/MDX files.
