feat(playground): support babelUrl

--- a/packages/document/docs/en/plugin/official-plugins/playground.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/playground.mdx
@@ -172,9 +172,20 @@ pluginPlayground({
   ]
 });
 ```
+
+### babelUrl
+
+Playground uses `@babel/standalone` to compile the demo code, loaded from  [cdnjs.com](https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.22.20/babel.min.js) by default.
+
+You can modify the URL served to other CDNs, such as unpkg, jsdelivr, etc.
+
 ### monacoLoader
 
-Configure monaco-loader behaviors. The full document can be found at [suren-atoyan/monaco-loader](https://github.com/suren-atoyan/monaco-loader#config)
+Configure monaco-loader behaviors, loaded from [cdnjs.com](https://cdnjs.com/libraries/monaco-editor) by default.
+
+You can modify the URL served to other CDNs, such as unpkg, jsdelivr, etc.
+
+The full document can be found at [suren-atoyan/monaco-loader](https://github.com/suren-atoyan/monaco-loader#config)
 
 ### monacoOptions
 
