--- a/packages/document/docs/zh/fragments/mdx-rs.mdx
+++ b/packages/document/docs/zh/fragments/mdx-rs.mdx
@@ -9,5 +9,5 @@ export default defineConfig({
 ```
 
 :::tip 注意
-这个功能底层基于 Rspress 自研的 [@modern-js/mdx-rs-binding](https://github.com/web-infra-dev/mdx-rs-binding) 库来实现，性能比 JS 版本的 MDX 编译器高 5 ~ 10 倍，但目前还不支持 JS 版本的插件，如果你需要加入自定义的 remark 或 rehype 插件，建议不要开启这个功能。
+这个功能底层基于 Rspress 自研的 [@rspress/mdx-rs](https://github.com/web-infra-dev/mdx-rs) 库来实现，性能比 JS 版本的 MDX 编译器提升 10 倍以上，但目前还不支持 JS 版本的插件，如果你需要加入自定义的 remark 或 rehype 插件，建议不要开启这个功能。
 :::
